--- a/app/views/application/_nav.html.slim
+++ b/app/views/application/_nav.html.slim
@@ -1,32 +1,32 @@
-%ul.nav.nav-pills.pull-right
+ul.nav.nav-pills.pull-right
   - if current_user
-    %li
+    li
       = link_to current_user do
         = gravatar_tag current_user, size: 20
         = current_user.login_name
-  %li{(controller_name == 'users' and action_name == 'index') ? { class: 'active' } : {}}
+  li class="#{controller_name == 'users' and action_name == 'index' ? 'active' : ''}"
     = link_to users_path do
-      %i.icon-user
+      i.icon-user
       = t('users')
-  %li{controller_name == 'practices' ? { class: 'active' } : {}}
+  li class="#{controller_name == 'practices' ? 'active' : ''}"  
     = link_to practices_path do
-      %i.icon-tasks
+      i.icon-tasks
       = t('practices')
-  %li{controller_name == 'companies' ? { class: 'active' } : {}}
+  li class="#{controller_name == 'companies' ? 'active' : ''}"
     = link_to companies_path do
-      %i.icon-briefcase
+      i.icon-briefcase
       = t('companies')
   - if current_user
-    %li
+    li
       = link_to logout_path do
-        %i.icon-off
+        i.icon-off
         = t('logout')
   - else
-    %li
+    li
       = link_to login_path do
-        %i.icon-off
+        i.icon-off
         = t('sign_in')
-    %li
+    li
       = link_to new_user_path do
-        %i.icon-ok
+        i.icon-ok
         = t('sign_up')
