--- a/app/views/practices/show.html.slim
+++ b/app/views/practices/show.html.slim
@@ -1,16 +1,16 @@
 - title @practice.title
-%h1= @practice.title
-%span.label.label-info= t(@practice.target)
-%h2= t('helpers.label.practice.description')
+h1= @practice.title
+span.label.label-info= t(@practice.target)
+h2= t('helpers.label.practice.description')
 .practice= simple_format rendering(@practice.description)
-%h2= t('helpers.label.practice.goal')
+h2= t('helpers.label.practice.goal')
 .goal= simple_format rendering(@practice.goal)
 - if current_user.present?
   = @practice.learning_status(current_user.id)
 = link_to t('edit'), edit_practice_path(@practice), class: 'btn btn-primary'
 = link_to t('destroy'), practice_path(@practice), data: { confirm: t('are_you_sure') }, method: :delete, class: 'btn btn-danger'
 
-%h3= t('completed_users')
+h3= t('completed_users')
 - @practice.completed_users.each do |user|
   .icon.completed-users
     = link_to user do
