--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -12,5 +12,7 @@
   = f.input :password, hint: false, placeholder: t('helpers.label.user.password')
   = f.input :password_confirmation, hint: false, placeholder: t('helpers.label.user.password_confirmation')
   = f.input :job, collection: User.jobs_for_select, as: :radio_buttons
+  = f.input :find_job_assist, inline_label: t('i_want_to_find_job_assist')
+  p= t('we_will_find_rails_job_by_our_best')
   = f.association :company, include_blank: false
   = f.submit nil, class: 'btn btn-primary'
