--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,5 +1,6 @@
 - title t('listing_users')
 h1 #{t('listing_users')} (#{@users.size})
+= render 'tab'
 table class="table table-striped"
   - @users.each do |user|
     tr
