--- a/app/views/practices/index.html.slim
+++ b/app/views/practices/index.html.slim
@@ -2,19 +2,11 @@
 h1= t('practices')
 - if current_user.present?
   button#display-switch.btn.on= t('hide_completed')
-ul.nav.nav-tabs
-  li class="#{params['target'].blank? or params['target'] == 'all' ? 'active' : ''}"
-    = link_to t('all'), practices_path(target: 'all')
-  li class="#{params['target'] == 'everyone' ? 'active' : ''}"  
-    = link_to t('for_everyone'), practices_path(target: 'everyone')
-  li class="#{params['target'] == 'programmer' ? 'active' : ''}" 
-    = link_to t('for_programmer'), practices_path(target: 'programmer')
-  - if current_user.present?
-    li class="#{params['target'] == 'me' ? 'active' : ''}" 
-      = link_to t('my_practices'), practices_path(target: 'me')
+= render 'tab'
 - @categories.each do |category|
-  h2= category.name
-  table.table.table-striped.practices
-    tbody
-      = render category.practices
+  - if category.practices.present?
+    h2= category.name
+    table.table.table-striped.practices
+      tbody
+        = render category.practices
 = link_to t('new_practice'), new_practice_path, class: 'btn btn-block btn-primary'
