--- a/app/views/layouts/admin.html.slim
+++ b/app/views/layouts/admin.html.slim
@@ -7,11 +7,9 @@ html
     = javascript_include_tag 'admin'
     = csrf_meta_tags
   body class="#{controller_name}_#{action_name}"
+    = render 'header'
+    = render 'alert'
     .container
-      #header
-        = render 'nav'
-        h1= link_to t('256interns'), root_path
-        = render 'alert'
       .row
         .span12= yield
       #footer
