Show inactive users

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -25,6 +25,14 @@ body.users_index
   table
     td.icon
       width: 120px
+
+    tr.inactive
+      filter: sepia(100%)
+      -webkit-filter: sepia(100%)
+      -moz-filter: sepia(100%)
+      -o-filter: sepia(100%)
+      -ms-filter: sepia(100%)
+
 .home_index
   color: $white
   background: $black
