--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,7 +1,7 @@
 - title t('listing_users')
 h1 #{t('listing_users')} (#{@users.size})
 = render 'tab'
-h2= t('active_users')
+h2= t('active_users', count: @active_users.count)
 = render 'table', users: @active_users
-h2= t('inactive_users')
+h2= t('inactive_users', count: @inactive_users.count)
 = render 'table', users: @inactive_users
