Add user's practice

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -9,6 +9,16 @@ body.practices_index
       vertical-align: middle
     td.status
       width: 70px
+      label
+        text-align: center
+        font-size: 14px
+        padding: 4px
+      label.not_complete
+        background: #e6e6e6
+      label.started
+        background: #51A350
+      label.complete
+        background: #2f96b4
     td.handle
       width: 140px
       font-size: 20px
