--- a/app/views/users/practices/index.html.slim
+++ b/app/views/users/practices/index.html.slim
@@ -4,6 +4,14 @@ h1= t("bob's_practices", name: @user.login_name)
   - if category.practices.present?
     h2= category.name
     p.description= simple_format category.description
+
+    .row
+      .span10
+        .progress
+          .bar style="width:#{@user.completed_percentage_by(category)}%"
+      .span2
+        b #{@user.completed_practices_size(category)} / #{category.practices.size} #{t('completed')}
+
     table.table.table-striped.practices
       tbody
         = content_tag_for :tr, category.practices do |practice|
@@ -11,3 +19,4 @@ h1= t("bob's_practices", name: @user.login_name)
           - status = practice.status(@user)
           td.status
             label[class="#{status}"]= t(status)
+
