--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -120,3 +120,9 @@ body.users_index
 
   .inquiry
     margin: 40px
+
+body.feeds_index
+  ul.entries
+    margin: 0
+    padding: 0
+    list-style: none
