Add stack button

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -1,6 +1,9 @@
 $black: #031f29
 $white: white
 
+.relative
+  position: relative
+
 body.practices_index
   #display-switch
     float: right
@@ -26,6 +29,15 @@ body.practices_index
 body.practices_show
   .completed-users
     display: inline
+  .buttons
+    position: absolute
+    right: 0
+    top: 0
+    .btn
+      margin-right: 6px
+  .span10
+    h1
+      padding-right: 120px
 
 #footer
   padding: 20px
