--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,7 +15,7 @@ html
     = render 'alert'
     .container
       .row
-        .span10= yield
+        .span10.relative= yield
         .span2= render 'active_users'
     #footer
       | ©
