Add a graduation flug

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -7,3 +7,5 @@ h2= t('active_users', count: @active_users.count)
 = render 'user', users: @active_users
 h2= t('inactive_users', count: @inactive_users.count)
 = render 'user', users: @inactive_users
+h2 卒業生 (#{@graduated_users.count})
+= render 'user', users: @graduated_users
