--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -6,6 +6,7 @@
   = f.input :first_name, hint: false, placeholder: t('helpers.label.user.first_name')
   = f.input :last_name, hint: false, placeholder: t('helpers.label.user.last_name')
   = f.input :description, hint: false, placeholder: t('helpers.label.user.description'), input_html: { class: 'input-block-level', rows: 10 }
+  = f.input :github_account, hint: false, placeholder: t('helpers.label.user.github_account'), input_html: { class: 'span6' }
   = f.input :twitter_url, hint: false, placeholder: t('helpers.label.user.twitter_url'), input_html: { class: 'span6' }
   = f.input :facebook_url, hint: false, placeholder: t('helpers.label.user.facebook_url'), input_html: { class: 'span6' }
   = f.input :blog_url, hint: false, placeholder: t('helpers.label.user.blog_url'), input_html: { class: 'span6' }
