--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -138,3 +138,16 @@ body.feeds_index
     margin: 0
     padding: 0
     list-style: none
+
+#nda
+  border: 1px #999 solid
+  overflow: scroll
+  height: 200px
+  padding: 10px 10px
+  margin-bottom: 20px
+
+  h1
+    font-size: 22px
+
+  h2
+    font-size: 18px
